--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,8 +34,8 @@ body{
     align-items: center;
 }
 .logo-class img{
-    width: 73.3px;
-    height: 20px;
+    width: 110px;
+    height: 30px;
 }
 .logo-class p{
     margin: 0px;
@@ -53,10 +53,10 @@ body{
 #search{
     justify-self: right;
     width: 169px!important;
-    height: 24px!important;
-    background-color: #f9f9f9;
-    border-radius: 12px;
+    height: 30px!important;
+    border-radius: 3px;
     border: solid 1px rgba(22, 50, 69, 0.1);
+    background-color: #f9f9f9;
     padding-left: 20px;
     font-size: 13px;
     margin-right: 45px;
@@ -80,17 +80,23 @@ body{
     color: white;
     padding: 33px 0px 0px 0px;
     margin-bottom: 29px;
-    font-size: 27px;
+    font-size: 38px;
     font-weight: bold;
     font-stretch: normal;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
     font-family: InriaSerif;
+    text-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
 }
 .search-sales{
     text-align: center;
-    background-color: #1d3143;
+    background-image: url(../img/background.png);
+    width: 1439.8px;
+    height: 226px;
+    object-fit: contain;
+    background-size: cover;
+    width: 100%;
 }
 select, input{
     width: 150px!important;
@@ -119,6 +125,7 @@ select, input{
     width: max-content;
     border-radius: 3px;
     border: solid 1px #000;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .form-wrapper{
     padding-bottom: 30px;
@@ -154,12 +161,18 @@ select, input{
 }
 .container-search{
     margin: 0px 75px;
+    display: none;
 }
 .container-sort{
     text-align: -webkit-right;
     text-align: -moz-right;
     max-width: 814px;
     margin: auto auto;
+    display: none;
+}
+.container-sort.open,
+.container-search.open{
+    display: block;
 }
 .sort-by{
     padding: 11px!important;
@@ -242,7 +255,7 @@ select, input{
     overflow-y: scroll;
 }
 .select.open .custom-options,
-.open .custom-options {
+.custom-options.open {
     opacity: 1;
     visibility: visible;
     pointer-events: all;
@@ -391,12 +404,15 @@ button.disabled{
 }
 .pagina{
     margin: 0px 63px;
+    display: none;
+}
+.pagina.open{
+    display: block;
 }
 
 /* SEARCH DOROPDOWN */
 .searchHeader{
     position: relative;
-    text-align: right;
 }
 .search-dropdown{
     position: absolute;
@@ -436,9 +452,7 @@ button.disabled{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 116px;
     margin-bottom: 3px;
-    text-align: left;
 }
 .title-element p{
     font-family: Inter-Regular;
@@ -589,9 +603,135 @@ button.disabled{
     border-radius: 3px;
     border: solid 1px #1fb797;
 }
-.droparrow-wrapper{
+.droparrow-wrapper,
+.class-thanks{
     display: none;
 }
+.class-thanks.open{
+    display: block;
+    text-align: center;
+}
+.class-thanks h2{
+    font-family: InriaSerif;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #163245;
+    margin-bottom: 20px;
+    margin-top: 15px;
+}
+.class-thanks p{
+    font-family: Inter-Regular_;
+    font-size: 9px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #636366;
+    margin-bottom: 33px;
+}
+.class-thanks img{
+    width: 63.4px;
+    height: 41px;
+    object-fit: contain;
+}
+.class-thanks button{
+    width: 200px;
+    height: 35px;
+    border-radius: 3px;
+    border: solid 1px #163245;
+    background-color: #163245;
+    color: white;
+    text-align: center;
+    font-size: 9px;
+    font-weight: 600;
+    font-family: Inter-Regular;
+    margin-top: 10px;
+}
+.container-default{
+    width: 787px;
+    max-width: 787px;
+    /* text-align: center; */
+    margin: auto auto;
+}
+.container-default.open{
+    display: none;
+}
+.container-default h2{
+    border-bottom: solid 1px #979797;
+    padding-bottom: 11.5px;
+    font-family: InriaSerif;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #163245;
+    margin-top: 36px;
+    margin-bottom: 24px;
+}
+.box{
+    display: grid;
+    grid-template-columns: 38% 62%;
+    border-radius: 3px;
+    border: solid 1px rgba(0, 0, 0, 0.15);
+    background-color: #fff;
+}
+.box:hover{
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.box img{
+    width: 144.7px;
+    height: 152px;
+}
+.box-right{
+    margin-left: 18.8px;
+    align-self: center;
+}
+.box-right img{
+    width: 21.4px;
+    height: 26.1px;
+    object-fit: contain;
+}
+.box-right h2{
+    font-family: InriaSerif;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    border: 0px;
+    margin: 11px 0px 6px 0px;
+    color: #163245!important;
+    text-decoration: none!important;
+}
+.box-right p{
+    font-family: Inter-Regular;
+    font-size: 12px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: -0.1px;
+    color: black!important;
+}
+.default-page{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 24px;
+}
+.default-page a{
+    text-decoration: none;
+}
+
 
 @media (max-width: 1430px) {
     .col-xl-4{
@@ -636,6 +776,16 @@ button.disabled{
     }
     .description .custom-options{
         right: -1px;
+    }
+    .container-default{
+        width: 601px;
+    }
+    .box{
+        grid-template-columns: 46% 54%;
+    }
+    .box img{
+        width: 136.7px;
+        object-position: left;
     }
 }
 @media (max-width: 970px) {
@@ -744,14 +894,33 @@ button.disabled{
         display: block;
         width: 11.4px;
         height: 11.5px;
+        margin-top: 9.25px;
     }
     .searchHeader{
+        align-self: center;
+        border-radius: 3px;
+        border: solid 1px rgba(0, 0, 0, 0.15);
+        width: 30px;
+        height: 30px;
         justify-self: right;
+        text-align: -webkit-center;
     }
     .droparrow.open{
         display: block;
         width: 10.6px!important;
         height: 10.9px!important;
+        margin-top: 9.5px;
+    }
+    .droparrow-wrapper{
+        border-radius: 3px;
+        border: solid 1px rgba(0, 0, 0, 0.15);
+        display: none;
+    }
+    .droparrow-wrapper.open{
+        display: block;
+        width: 30px;
+        height: 30px;
+        text-align: -webkit-center;
     }
     .logo.open,
     .logo-class.open p{
@@ -769,6 +938,9 @@ button.disabled{
         height: 100%;
         background-color: #f9f9f9;
         z-index: 99;
+    }
+    .searchHeader.open{
+        display: none;
     }
     .searchClassMobile{
         display: block;
@@ -820,8 +992,69 @@ button.disabled{
     .sales-platform.active{
         display: none;
     }
+    .ticketbtn{
+        display: none;
+    }
+    .ticket{
+        width: 30px;
+        height: 30px;
+    }
 
+    /*mobile-ticekt*/
+    .ticket-form{
+        top: 44px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 30px;
+    }
+    .ticket-dates input{
+        width: 100%!important;
+    }
+    .ticket-dates{
+        margin-bottom: 36px;
+    }
+    .ticket-send{
+        margin-top: 36px;
+        height: 45px;
+
+    }
+    .ticket-id input,
+    .ticket-dates input{
+        height: 45px!important;
+    }
+    .ticket-form{
+        background-color: #f9f9f9;
+        border: 0px;
+        border-radius: 0px;
+    }
+    .ticket.open{
+        display: none;
+    }
+    .ticket-form.open .downarrow{
+        top: 18px;
+    }
+
+    .search-sales{
+        height: 300px;
+    }
+    .default-page{
+        grid-template-columns: 1fr;
+    }
+    .container-default{
+        width: 100%;
+        padding: 0px 30px;
+    }
+    .form-class h1{
+        font-size: 27px;
+    }
+    body.open{
+        overflow: hidden;
+    }
 
 }
+
+
+
 
 
